--- a/SmartCab/smartcab.ipynb
+++ b/SmartCab/smartcab.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "# Machine Learning Engineer Nanodegree\n",
     "## Reinforcement Learning\n",
-    "## Project: Train a Smartcab to Drive\n",
-    "\n",
-    "Welcome to the fourth project of the Machine Learning Engineer Nanodegree! In this notebook, template code has already been provided for you to aid in your analysis of the *Smartcab* and your implemented learning algorithm. You will not need to modify the included code beyond what is requested. There will be questions that you must answer which relate to the project and the visualizations provided in the notebook. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide in `agent.py`.  \n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut. In addition, Markdown cells can be edited by typically double-clicking the cell to enter edit mode."
+    "## Project: Train a Smartcab to Drive"
    ]
   },
   {
@@ -19,8 +15,8 @@
    "source": [
     "-----\n",
     "\n",
-    "## Getting Started\n",
-    "In this project, you will work towards constructing an optimized Q-Learning driving agent that will navigate a *Smartcab* through its environment towards a goal. Since the *Smartcab* is expected to drive passengers from one location to another, the driving agent will be evaluated on two very important metrics: **Safety** and **Reliability**. A driving agent that gets the *Smartcab* to its destination while running red lights or narrowly avoiding accidents would be considered **unsafe**. Similarly, a driving agent that frequently fails to reach the destination in time would be considered **unreliable**. Maximizing the driving agent's **safety** and **reliability** would ensure that *Smartcabs* have a permanent place in the transportation industry.\n",
+    "## Introduction\n",
+    "This project focuses on constructing an optimized Q-Learning driving agent that will navigate a *Smartcab* through its environment towards a goal. Since the *Smartcab* is expected to drive passengers from one location to another, the driving agent will be evaluated on two very important metrics: **Safety** and **Reliability**. A driving agent that gets the *Smartcab* to its destination while running red lights or narrowly avoiding accidents would be considered **unsafe**. Similarly, a driving agent that frequently fails to reach the destination in time would be considered **unreliable**. Maximizing the driving agent's **safety** and **reliability** would ensure that *Smartcabs* have a permanent place in the transportation industry.\n",
     "\n",
     "**Safety** and **Reliability** are measured using a letter-grade system as follows:\n",
     "\n",
@@ -33,7 +29,7 @@
     "|   D   \t| Agent causes at least one minor accident,<br/> such as turning left on green with oncoming traffic.       \t| Agent reaches the destination on time<br />for at least 60% of trips. |\n",
     "|   F   \t|  Agent causes at least one major accident,<br />such as driving through a red light with cross-traffic.      \t| Agent fails to reach the destination on time<br />for at least 60% of trips. |\n",
     "\n",
-    "To assist evaluating these important metrics, you will need to load visualization code that will be used later on in the project. Run the code cell below to import this code which is required for your analysis."
+    "To assist evaluating these important metrics, we will need to load visualization code that will be used later on in the project."
    ]
   },
   {
@@ -67,12 +63,7 @@
     "In a few sentences, describe what you observe during the simulation when running the default `agent.py` agent code. Some things you could consider:\n",
     "- *Does the Smartcab move at all during the simulation?*\n",
     "- *What kind of rewards is the driving agent receiving?*\n",
-    "- *How does the light changing color affect the rewards?*  \n",
-    "\n",
-    "**Hint:** From the `/smartcab/` top-level directory (where this notebook is located), run the command \n",
-    "```bash\n",
-    "'python smartcab/agent.py'\n",
-    "```"
+    "- *How does the light changing color affect the rewards?*  "
    ]
   },
   {
@@ -262,8 +253,7 @@
    "metadata": {},
    "source": [
     "### Question 5\n",
-    "*If a state is defined using the features you've selected from **Question 4**, what would be the size of the state space? Given what you know about the environment and how it is simulated, do you think the driving agent could learn a policy for each possible state within a reasonable number of training trials?*  \n",
-    "**Hint:** Consider the *combinations* of features to calculate the total number of states!"
+    "*If a state is defined using the features you've selected from **Question 4**, what would be the size of the state space? Given what you know about the environment and how it is simulated, do you think the driving agent could learn a policy for each possible state within a reasonable number of training trials?*"
    ]
   },
   {
@@ -277,7 +267,7 @@
     "* intention of the vehicle on the left: 4 possible values\n",
     "* intention of the oncoming vehicle : 4 possible states\n",
     "\n",
-    "Therefore we have 3 * 2 * 4 * 4 = 96 possible states. \n",
+    "Therefore we have `3 * 2 * 4 * 4 = 96` possible states. \n",
     "\n",
     "Also I have tested, the last 2 fields could be in principle condensed to 2 possible states indicating a watch-out - reducing state space should significantly help agent the learning to learn, as I have tested it helps get at least A in all default learning tasks."
    ]
@@ -589,14 +579,6 @@
    "source": [
     "# Load the 'default-learning' file from the default Q-Learning simulation with gamma = 1\n",
     "vs.plot_trials('sim_default-learning_gamma_1.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \n",
-    "**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
    ]
   }
  ],
